added template for app Horoscope

--- a/horoscope/templates/horoscope/info_zodiac.html
+++ b/horoscope/templates/horoscope/info_zodiac.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Title</title>
+  <title>Гороскоп для {{sing}}</title>
 </head>
 <body>
-    <h1>Привет</h1>
+    <h1><b>Гороскоп</b></h1>
+    <h2>{{ description_zodiac }}</h2>
+
 </body>
 </html>
